--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@tanstack/react-query": "^5.61.3",
     "axios": "^1.7.7",
     "expo": "~52.0.9",
     "expo-blur": "~14.0.1",
@@ -32,6 +33,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
